# CUDA_CPP-Python-wrapper

./: .gitignore  CMakeLists.txt  README.md  test.py  vector.cpp  vector.cu
inc/: tiny_helper_cuda.h  vector.cuh  vector.h
